--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 5px auto;
-    width: 35%;
+    margin: 5px 0;
+    width:35%;
 }
 
 .BuildControl button {
@@ -16,6 +16,7 @@
     cursor: pointer;
     outline: none;
 }
+
 
 .BuildControl button:disabled {
     background-color: #AC9980;
