--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -1,14 +1,13 @@
 .BuildControls {
-    width:100%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    width: 100%;
     background-color: #CF8F2E;
-    box-shadow: 0px 2px 1px #ccc;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    box-shadow: 0 2px 1px #ccc;
     margin: auto;
     padding: 10px 0;
 }
-
 
 .OrderButton {
     background-color: #DAD735;
