--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.css
@@ -3,11 +3,11 @@
     justify-content: space-between;
     align-items: center;
     margin: 5px 0;
-    width:35%;
+    width:26%;
 }
 
 .BuildControl button {
-    display: block;
+    display: inline-block;
     font: inherit;
     padding: 5px;
     margin: 0 5px;
