--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -19,6 +19,8 @@
     font-size: 1.2em;
     padding: 15px 30px;
     box-shadow: 2px 2px 2px #966909;
+    margin: 20px auto;
+    text-align: center;
 }
 
 .OrderButton:hover, .OrderButton:active {
