--- a/src/containers/Checkout/CustomerInfo/CustomerInfo.css
+++ b/src/containers/Checkout/CustomerInfo/CustomerInfo.css
@@ -1,16 +1,11 @@
 .CustomerInfo {
-    width: 50%;
+    width: 100%;
+    max-width:600px;
     margin: 30px auto;
     text-align: center;
     background-color: #fdf6f6;
     padding: 10px;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
-}
-
-.CustomerInfo input {
-    display: block;
-    width: 80%;
-    padding: 10px;
-    margin: 15px auto;
+    box-sizing: border-box;
 }
