--- a/src/components/ui/Modal/Modal.css
+++ b/src/components/ui/Modal/Modal.css
@@ -7,9 +7,11 @@
     box-shadow: 1px 1px 1px black;
     padding: 16px;
     left: 15%;
-    top: 0%;
+    top: 5%;
     box-sizing: border-box;
     transition: all 0.6s ease-out;
+    overflow-y: auto;
+    height: calc(100% - 15vh);
 }
 
 .close {
