--- a/src/components/ui/Spinner/Spinner.css
+++ b/src/components/ui/Spinner/Spinner.css
@@ -1,55 +1,67 @@
-Spinner {
-  display: inline-block;
-  position: relative;
-  width: 64px;
-  height: 64px;
-}
-Spinner div {
-  position: absolute;
-  top: 27px;
-  width: 11px;
-  height: 11px;
+.Loader,
+.Loader:before,
+.Loader:after {
   border-radius: 50%;
-  background: #fcf;
-  animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
-Spinner div:nth-child(1) {
-  left: 6px;
-  animation: Spinner1 0.6s infinite;
+.Loader {
+  color: #521751;
+  font-size: 11px;
+  text-indent: -99999em;
+  margin: 55px auto;
+  position: relative;
+  width: 10em;
+  height: 10em;
+  box-shadow: inset 0 0 0 1em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
 }
-Spinner div:nth-child(2) {
-  left: 6px;
-  animation: Spinner2 0.6s infinite;
+.Loader:before,
+.Loader:after {
+  position: absolute;
+  content: '';
 }
-Spinner div:nth-child(3) {
-  left: 26px;
-  animation: Spinner2 0.6s infinite;
+.Loader:before {
+  width: 5.2em;
+  height: 10.2em;
+  background: #fff;
+  border-radius: 10.2em 0 0 10.2em;
+  top: -0.1em;
+  left: -0.1em;
+  -webkit-transform-origin: 5.2em 5.1em;
+  transform-origin: 5.2em 5.1em;
+  -webkit-animation: load2 2s infinite ease 1.5s;
+  animation: load2 2s infinite ease 1.5s;
 }
-Spinner div:nth-child(4) {
-  left: 45px;
-  animation: Spinner3 0.6s infinite;
+.Loader:after {
+  width: 5.2em;
+  height: 10.2em;
+  background: #fff;
+  border-radius: 0 10.2em 10.2em 0;
+  top: -0.1em;
+  left: 5.1em;
+  -webkit-transform-origin: 0px 5.1em;
+  transform-origin: 0px 5.1em;
+  -webkit-animation: load2 2s infinite ease;
+  animation: load2 2s infinite ease;
 }
-@keyframes Spinner1 {
+@-webkit-keyframes load2 {
   0% {
-    transform: scale(0);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    transform: scale(1);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
-@keyframes Spinner3 {
+@keyframes load2 {
   0% {
-    transform: scale(1);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    transform: scale(0);
-  }
-}
-@keyframes Spinner2 {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(19px, 0);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
